unpackaged/main/default/objects/Quote/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>This field should be populated for the date the quote is SENT to the customer.</description>
    <inlineHelpText>This field should be populated for the date the quote is SENT to the customer.</inlineHelpText>
    <label>Quote Effective Date</label>
    <type>Date</type>
</CustomField>