unpackaged/main/default/objects/Quote/fields/Months_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Months_in_Contract__c</fullName>
    <description># of months in contract by Service Start Date to End date</description>
    <formula>CEILING(( Service_End_Date__c - Service_Start_Date__c) / 365 * 12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months in Contract</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>