unpackaged/main/default/objects/Quote/fields/Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Upfront</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annually</fullName>
            </value>
            <value>
                <fullName>Annually</fullName>
                <label>Annually (multi-year)</label>
            </value>
            <value>
                <fullName>3-Year</fullName>
                <isActive>false</isActive>
                <label>3-Year</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>