unpackaged/main/default/objects/Quote/fields/PO_Required__c.field-meta.xml
<CustomField>
    <fullName>PO_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PO Required</label>
    <type>Checkbox</type>
</CustomField>