unpackaged/main/default/objects/Quote/fields/Quote_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Account_Name__c</fullName>
    <formula>Opportunity.Account.Name</formula>
    <label>Quote Account Name</label>
    <type>Text</type>
</CustomField>