unpackaged/main/default/objects/Quote/fields/Quote_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration_Date__c</fullName>
    <description>This field should be populated for the date the quote EXPIRES after being sent to the customer.</description>
    <inlineHelpText>This field should be populated for the date the quote EXPIRES after being sent to the customer.</inlineHelpText>
    <label>Quote Expiration Date</label>
    <type>Date</type>
</CustomField>