unpackaged/main/default/objects/Quote/fields/Quote_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Opportunity_Name__c</fullName>
    <formula>Opportunity.Name</formula>
    <label>Quote Opportunity Name</label>
    <type>Text</type>
</CustomField>