unpackaged/main/default/objects/Quote/fields/Quote_Term_Length_in_Months__c.field-meta.xml
<CustomField>
    <fullName>Quote_Term_Length_in_Months__c</fullName>
    <formula>IF(ISPICKVAL(Term_Length__c,'1 Year'), 12,
IF(ISPICKVAL(Term_Length__c,'2 Years'), 24,
IF(ISPICKVAL(Term_Length__c,'3 Years'), 36,
IF(ISPICKVAL(Term_Length__c,'4 Years'), 48,
IF(ISPICKVAL(Term_Length__c,'5 Years'), 60,NULL)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Term Length in Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>