unpackaged/main/default/objects/Quote/fields/SO_Terms__c.field-meta.xml
<CustomField>
    <fullName>SO_Terms__c</fullName>
    <label>SO Terms</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>