unpackaged/main/default/objects/Quote/fields/Term_Length__c.field-meta.xml
<CustomField>
    <fullName>Term_Length__c</fullName>
    <label>Term Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 Year</fullName>
            </value>
            <value>
                <fullName>2 Years</fullName>
            </value>
            <value>
                <fullName>3 Years</fullName>
            </value>
            <value>
                <fullName>4 Years</fullName>
            </value>
            <value>
                <fullName>5 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>