unpackaged/main/default/objects/Quote/validationRules/AE_SO_Approval.validationRule-meta.xml
<ValidationRule>
    <fullName>AE_SO_Approval</fullName>
    <active>true</active>
    <description>AE is only able to move SO to Needs Review, Presented, Accepted, Denied.</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; "Sales Leadership",
$Profile.Name &lt;&gt; "System Administrator",
ISPICKVAL(Status, "In Review"),
ISPICKVAL(Status, "Approved"),
ISPICKVAL(Status, "Rejected"))</errorConditionFormula>
    <errorMessage>Only Sales Leadership is able to move quote to this Status.</errorMessage>
</ValidationRule>